# saforia

./: .gitignore  AGENTS.md  LICENSE  README.md  README.ru.md  README.zh.md  RELEASE.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/workflows/: ci.yml  e2e.yml  github-pages.yml  release.yml
e2e/: app.spec.ts  aria.spec.ts  autosave-pref.spec.ts  blocked-mask.spec.ts  blur-clears-output.spec.ts  clipboard-clear.spec.ts  console-clear.spec.ts  csv-preview.spec.ts  drag-reorder.spec.ts  errors.spec.ts  extend-timer.spec.ts  flow-smoke.spec.ts  focus.spec.ts  hold-only-reveal.spec.ts  list-scroll.spec.ts  method-filter.spec.ts  mobile-drag-reorder.spec.ts  mobile-layout.spec.ts  pagination.spec.ts  pin.spec.ts  profile-delete.spec.ts  profile-switcher.spec.ts  quick-aria.spec.ts  save-on-generate.spec.ts  saved-enter.spec.ts  setup-a11y.spec.ts  setup-errors.spec.ts  setup.spec.ts  sort.spec.ts  viewerprompt.spec.ts
scripts/: check-assets.mjs  legacy-parity.mjs  notarize-macos.sh  sign-macos.sh  sign-windows.ps1
src/: bridge.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: backup.rs  config.rs  crypto.rs  dialogs.rs  gen.rs  main.rs  paths.rs  security.rs  store.rs
src/mocks/: mockInvoke.ts
src/types/: argon2-browser.d.ts
src/ui/: App.tsx  ClipboardProgress.tsx  PasswordInput.tsx  ProfileSwitcher.tsx  Toast.tsx  a11y.ts  backupCrypto.ts  events.ts  i18n.tsx
src/ui/components/: FingerprintMapper.tsx  FocusModal.tsx  HowItWorks.tsx  ViewerPrompt.tsx
src/ui/hooks/: useIsMobile.ts  (+2 more)
(+11 files in other folders)
