[package]
name = "saforia"
version = "0.1.0"
description = "Saforia – deterministic password generator with viewer-protected master password"
authors = ["Saforia Team"]
license = "MIT OR Apache-2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = "1.7"
sha2 = "0.10"
md-5 = "0.10"
base64 = "0.22"
rand = "0.8"
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
chacha20poly1305 = { version = "0.10", features = ["std"] }
directories = "5"
time = { version = "0.3", features = ["formatting"] }
thiserror = "1"
blake3 = "1"
cfg-if = "1"
jni = { version = "0.21", optional = true }
ndk-context = { version = "0.1", optional = true }

# Windows-only, for content protection
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

# macOS-only, for content protection
objc = { version = "0.2", optional = true }
objc-foundation = { version = "0.1", optional = true }
objc_id = { version = "0.1", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc = { version = "0.2" }
objc-foundation = { version = "0.1" }
objc_id = { version = "0.1" }

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21" }
ndk-context = { version = "0.1" }

[features]
default = []
